simplify junit tests